# reinforcementlearning4A

./: .gitignore  Cargo.toml  README.md  dataviz.ipynb
2024-07-23/: GridWorld.txt  LineWorld.txt  MontyHall.txt  SecretEnv1.txt  SecretEnv2.txt  SecretEnv3.txt  Shifumi.txt
environments/: grid_world.ipynb  shifumi.ipynb
exemples_cours/: [Exemple] Episodic semi gradient Sarsa.py  [Exemple] Naive Monte Carlo ES on Line World.ipynb  [Exemple] Naive Q Learning on Line World.ipynb  [Exercice] CorrectionLineWorld Policy Evaluation.ipynb  [Exercice] Expérimentations sur Line world et plus (1).ipynb
exemples_cours/[Projet] Secret envs 0 and 1 Python wrapper 2024_04_26 (with intel Mac architecture)/: secret_envs_wrapper.py
python environments/: grid_world.ipynb  line_world.ipynb  montyhall_5doors.ipynb  montyhall_normal.ipynb  shifumi.ipynb
results/: results.csv
results/Pi_values/: 6d9acd28-70a5-4bd0-a130-3fffbcac9173_2024-07-24_20-09-23_GridWorld_Q_learning_off_policy_0  6d9acd28-70a5-4bd0-a130-3fffbcac9173_2024-07-24_20-09-23_GridWorld_Q_learning_off_policy_1  6d9acd28-70a5-4bd0-a130-3fffbcac9173_2024-07-24_20-09-23_GridWorld_Q_learning_off_policy_2  6d9acd28-70a5-4bd0-a130-3fffbcac9173_2024-07-24_20-09-23_GridWorld_Q_learning_off_policy_3  6d9acd28-70a5-4bd0-a130-3fffbcac9173_2024-07-24_20-09-23_GridWorld_Q_learning_off_policy_4  6d9acd28-70a5-4bd0-a130-3fffbcac9173_2024-07-24_20-09-23_GridWorld_monte_carlo_exploring_starts_0  (+389 more)
secret_env_prof/: Cargo.toml
secret_env_prof/src/: main.rs
src/: algorithms.rs  environments.rs  main.rs  run_all_and_save.rs
(+16 files in other folders)
