[package]
name = "reinforcementlearning4A"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
libloading = "0.8.3"
colored = "1.6.1"
once_cell = "1.7"
chrono = "0.4"
csv = "1.1"
uuid = { version = "1.1", features = ["v4"] }

#[lib]
#crate-type = ["cdylib"]
#path = "src/lib.rs"